Updated landing page

--- a/src/template.html
+++ b/src/template.html
@@ -9,15 +9,8 @@
     <link rel="stylesheet" href="code/main.css" />
     <script type="module" src="code/main.js"></script>
     <!-- Page-Specific Imports -->
-    <link rel="stylesheet" href="code/pages/index.css" />
   </head>
   <body>
-    <main class="center">
-      <div class="container">
-        <h1>NYP Swift App Development Club</h1>
-        <p>This club is under the works.</p>
-        <p>Est. 2024-09-20</p>
-      </div>
-    </main>
+    <h1>Hello, world!</h1>
   </body>
 </html>
